<resources>

    <string name="app_name">Address Book</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Contact</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">E-Mail</string>
    <string name="street">Street</string>
    <string name="city">City/State/Zip</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="title_activity_view_contact">View Contact</string>
    <string name="title_activity_edit_contact">Edit Contact</string>

</resources>
