<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.username.addressbook.ViewContactActivity">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameView"
            android:hint="@string/name"
            android:textSize="40sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneView"
            android:hint="@string/phone"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailView"
            android:hint="@string/email"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/streetView"
            android:hint="@string/street"
            android:textSize="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zipView"
            android:hint="@string/city"
            android:textSize="20sp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/callImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Back to Contact List"
            android:id="@+id/save_contact_button"
            android:layout_weight="1" />

    </LinearLayout>
</ScrollView>
